src/test/deca/context/invalid/class/instance/float.deca
// Description:
//    Utilisation de instanceof sur un float
//
// Resultats:
//    cannot cast float to float

{
	int a;
	if(a instanceof float) {}
}

